--- a/style.css
+++ b/style.css
@@ -1,22 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600&display=swap");
 * {
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   outline: none;
   border: none;
   text-decoration: none;
-  -webkit-transition: all .2s linear;
-  transition: all .2s linear;
+  transition: all 0.2s linear;
 }
 
 img {
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  user-select: none;
 }
 
 html {
@@ -93,21 +90,15 @@ section {
 }
 
 .header {
-  position: -webkit-sticky;
   position: sticky;
   top: 0;
   left: 0;
   right: 0;
   background: #fff;
-  -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
-          box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
   padding: 2rem 10%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   z-index: 1000;
 }
 
@@ -138,8 +129,7 @@ section {
 }
 
 .header .navbar #close-navbar:hover {
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 
 .header .navbar a {
@@ -174,17 +164,10 @@ section {
   right: -105%;
   width: 35rem;
   background: #fff;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
+  flex-flow: column;
   gap: 2rem;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   height: 100%;
   z-index: 1200;
   padding: 2rem;
@@ -193,8 +176,7 @@ section {
 
 .account-form.active {
   right: 0;
-  -webkit-box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0.8);
-          box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0.8);
+  box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0.8);
 }
 
 .account-form #close-form {
@@ -207,8 +189,7 @@ section {
 }
 
 .account-form #close-form:hover {
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 
 .account-form form {
@@ -225,7 +206,7 @@ section {
   font-size: 2.5rem;
   text-transform: capitalize;
   color: #444;
-  padding-bottom: .5rem;
+  padding-bottom: 0.5rem;
   text-transform: uppercase;
 }
 
@@ -234,18 +215,14 @@ section {
   padding: 1.2rem 1.4rem;
   border: 0.1rem solid #0eb582;
   font-size: 1.6rem;
-  margin: .7rem 0;
+  margin: 0.7rem 0;
 }
 
 .account-form form .flex {
   padding: 1rem 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: .5rem;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .account-form form .flex label {
@@ -270,7 +247,7 @@ section {
 }
 
 .account-form .buttons .btn {
-  margin: 0 .5rem;
+  margin: 0 0.5rem;
 }
 
 .account-form .buttons .btn.active {
@@ -283,12 +260,8 @@ section {
 }
 
 .home .slide {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   height: 60rem;
   background-size: cover !important;
   background-position: center !important;
@@ -318,10 +291,8 @@ section {
 }
 
 .subjects .box-container {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(16rem, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
   gap: 2rem;
 }
 
@@ -347,14 +318,14 @@ section {
 
 .subjects .box-container .box img {
   height: 10rem;
-  margin-bottom: .7rem;
+  margin-bottom: 0.7rem;
 }
 
 .subjects .box-container .box h3 {
   font-size: 1.7rem;
   text-transform: capitalize;
   color: #444;
-  padding: .5rem 0;
+  padding: 0.5rem 0;
 }
 
 .subjects .box-container .box p {
@@ -418,21 +389,14 @@ section {
 }
 
 .about {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  align-items: center;
+  flex-wrap: wrap;
   gap: 3rem;
 }
 
 .about .image {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 40rem;
-          flex: 1 1 40rem;
+  flex: 1 1 40rem;
 }
 
 .about .image img {
@@ -440,9 +404,7 @@ section {
 }
 
 .about .content {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 40rem;
-          flex: 1 1 40rem;
+  flex: 1 1 40rem;
 }
 
 .about .content .about-title {
@@ -460,10 +422,8 @@ section {
 
 .about .content .icons-container {
   margin-top: 1rem;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(16rem, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
   gap: 2rem;
 }
 
@@ -476,11 +436,11 @@ section {
 
 .about .content .icons-container .icons img {
   height: 5rem;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .about .content .icons-container .icons h3 {
-  padding: .5rem 0;
+  padding: 0.5rem 0;
   font-size: 3rem;
   text-transform: capitalize;
   color: #444;
@@ -534,16 +494,10 @@ section {
 }
 
 .teachers .slide .content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding-top: 1rem;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .teachers .slide .content h3 {
@@ -574,12 +528,11 @@ section {
 }
 
 .reviews .slide p::before {
-  content: '';
+  content: "";
   position: absolute;
   bottom: -1.2rem;
   left: 50%;
-  -webkit-transform: translateX(-50%) rotate(45deg);
-          transform: translateX(-50%) rotate(45deg);
+  transform: translateX(-50%) rotate(45deg);
   background: #f0fdfa;
   border-bottom: 0.1rem solid #0eb582;
   border-right: 0.1rem solid #0eb582;
@@ -597,7 +550,7 @@ section {
   font-size: 2.2rem;
   text-transform: capitalize;
   color: #444;
-  padding: .5rem 0;
+  padding: 0.5rem 0;
 }
 
 .reviews .slide .stars {
@@ -606,16 +559,13 @@ section {
 }
 
 .courses .box-container {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(30rem, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   gap: 2rem;
 }
 
 .courses .box-container .box:hover .image img {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .courses .box-container .box.hide {
@@ -632,7 +582,7 @@ section {
   height: 100%;
   width: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .courses .box-container .box .image h3 {
@@ -642,7 +592,7 @@ section {
   position: absolute;
   top: 1rem;
   left: 1rem;
-  padding: .5rem 1.5rem;
+  padding: 0.5rem 1.5rem;
   background: #fff;
 }
 
@@ -666,15 +616,9 @@ section {
 }
 
 .courses .box-container .box .content .icons {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   margin-top: 2rem;
   padding-top: 2rem;
   border-top: 0.1rem solid #0eb582;
@@ -688,7 +632,7 @@ section {
 
 .courses .box-container .box .content .icons span i {
   color: #0eb582;
-  padding-right: .5rem;
+  padding-right: 0.5rem;
 }
 
 .courses .load-more {
@@ -698,10 +642,8 @@ section {
 
 .contact .icons-container {
   margin-bottom: 3rem;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(25rem, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   gap: 2rem;
 }
 
@@ -718,7 +660,7 @@ section {
   line-height: 6rem;
   font-size: 2rem;
   border-radius: 50%;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
   color: #fff;
   background: #0eb582;
 }
@@ -727,7 +669,7 @@ section {
   font-size: 2rem;
   text-transform: capitalize;
   color: #444;
-  padding: .5rem 0;
+  padding: 0.5rem 0;
 }
 
 .contact .icons-container .icons p {
@@ -737,21 +679,14 @@ section {
 }
 
 .contact .row {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  align-items: center;
+  flex-wrap: wrap;
   gap: 2rem;
 }
 
 .contact .row .image {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 40rem;
-          flex: 1 1 40rem;
+  flex: 1 1 40rem;
 }
 
 .contact .row .image img {
@@ -759,9 +694,7 @@ section {
 }
 
 .contact .row form {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 40rem;
-          flex: 1 1 40rem;
+  flex: 1 1 40rem;
   border: 0.1rem solid #0eb582;
   padding: 2rem;
 }
@@ -778,7 +711,7 @@ section {
   padding: 1.2rem 1.4rem;
   border: 0.1rem solid #0eb582;
   font-size: 1.6rem;
-  margin: .7rem 0;
+  margin: 0.7rem 0;
 }
 
 .contact .row form .box:focus {
@@ -786,15 +719,7 @@ section {
   color: #fff;
 }
 
-.contact .row form .box:focus::-webkit-input-placeholder {
-  color: #eee;
-}
-
-.contact .row form .box:focus:-ms-input-placeholder {
-  color: #eee;
-}
-
-.contact .row form .box:focus::-ms-input-placeholder {
+.contact .row form .box:focus::-moz-placeholder {
   color: #eee;
 }
 
@@ -808,21 +733,14 @@ section {
 }
 
 .faq .accordion-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   gap: 2rem;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  align-items: flex-start;
 }
 
 .faq .accordion-container .accordion {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 40rem;
-          flex: 1 1 40rem;
+  flex: 1 1 40rem;
   border: 0.1rem solid #0eb582;
 }
 
@@ -836,8 +754,7 @@ section {
 
 .faq .accordion-container .accordion.active .accordion-heading i {
   color: #fff;
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 .faq .accordion-container .accordion.active .accordion-content {
@@ -845,15 +762,9 @@ section {
 }
 
 .faq .accordion-container .accordion .accordion-heading {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   gap: 1rem;
   cursor: pointer;
   padding: 1.5rem;
@@ -893,10 +804,8 @@ section {
 }
 
 .footer .box-container {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(25rem, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   gap: 2rem;
 }
 
@@ -922,7 +831,7 @@ section {
   font-size: 1.7rem;
   background-color: #0eb582;
   color: #fff;
-  margin-right: .3rem;
+  margin-right: 0.3rem;
   text-align: center;
 }
 
@@ -934,7 +843,7 @@ section {
   font-size: 1.7rem;
   line-height: 2;
   color: #777;
-  padding: .5rem 0;
+  padding: 0.5rem 0;
   display: block;
 }
 
@@ -980,7 +889,6 @@ section {
     padding: 3rem 5%;
   }
 }
-
 @media (max-width: 991px) {
   html {
     font-size: 55%;
@@ -992,7 +900,6 @@ section {
     padding: 3rem 2rem;
   }
 }
-
 @media (max-width: 768px) {
   .header #menu-btn {
     display: inline-block;
@@ -1004,24 +911,16 @@ section {
     width: 30rem;
     background: #fff;
     height: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: column;
-            flex-flow: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    flex-flow: column;
+    justify-content: center;
     z-index: 1200;
   }
   .header .navbar #close-navbar {
     display: block;
   }
   .header .navbar.active {
-    -webkit-box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0.8);
-            box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0.8);
+    box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0.8);
     right: 0;
   }
   .header .navbar a {
@@ -1034,7 +933,6 @@ section {
     font-size: 3rem;
   }
 }
-
 @media (max-width: 450px) {
   html {
     font-size: 50%;
